--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^14.0.2",
+    "@nextui-org/react": "^2.2.8",
     "@prisma/client": "^5.3.1",
-    "next": "13.5.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "framer-motion": "^10.16.4",
+    "next": "^14.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "^14.0.1",
     "postcss": "^8",
-    "prisma": "^5.3.1",
+    "prisma": "^5.4.2",
     "tailwindcss": "^3"
   }
 }
