--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "^14.0.1",
     "postcss": "^8",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "prisma": "^5.4.2",
     "tailwindcss": "^3"
   }
